# model-distillation-pipeline

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/: distilldb.py  models.py  train.py  vocab_mapping.py  vocab_mapping_251523ffd42075f5.json  vocab_mapping_store.py
app/vocab_mapping_backups/: vocab_mapping_251523ffd42075f5.json.10000.1755061905.bak  vocab_mapping_251523ffd42075f5.json.20000.1755061905.bak  vocab_mapping_251523ffd42075f5.json.orig.bak
